collapse fix

--- a/style.css
+++ b/style.css
@@ -20,8 +20,9 @@ input[type="range"]{
 	background-image: linear-gradient(90deg, magenta var(--percentage), transparent var(--percentage));
 }
 
-input[type="range"]:hover {
-  opacity: 1;
+input[type=range]:disabled {
+	background-image: linear-gradient(90deg, grey var(--percentage), transparent var(--percentage));
+  opacity: 0.2;
 }
 
 input[type=range]::-webkit-slider-thumb {
@@ -34,6 +35,10 @@ input[type=range]::-webkit-slider-thumb {
   background: cyan;
   cursor: pointer;
 }
+input[type=range]:disabled::-webkit-slider-thumb {
+	border: 2px solid white;
+  background: grey;
+}
 input[type=range]::-moz-range-thumb {
 	width: 15px;
   height: 15px;
@@ -41,6 +46,10 @@ input[type=range]::-moz-range-thumb {
 	border: 2px solid grey;
   background: cyan;
   cursor: pointer;
+}
+input[type=range]:disabled::-moz-range-thumb {
+	border: 2px solid white;
+  background: grey;
 }
 
 
